--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -424,6 +424,7 @@ color:#000;
     background-size: 100% 100% !important;
     padding: 20px;
 }
+
 .home-field-setting {
     background: transparent;
     border-bottom: 1px solid #000 !important;
@@ -471,11 +472,18 @@ color: #41294A;
     
     border-radius:10px !important;
 }
-
+.main-bx-gray{
+    background-color: #f2f4f3 !important;
+}
 /* section 2 */
 
 /*section 3*/
-
+.services-slider img {
+    height: 100%;
+    border-top-left-radius: 11px;
+    border-top-right-radius: 11px;
+    width: 100%;
+}
 .learn-more{
         background: transparent;
     border: 1px solid #99b07f;
@@ -483,7 +491,7 @@ color: #41294A;
     padding: 10px 28px;
     border-radius: 12px;
 }
-.col-lg-12.services-slider {
+.slick-slide .services-slider {
     background: #fff;
     /* padding: 20px; */
     border-radius: 10px;
@@ -616,11 +624,12 @@ input#gform_submit_button_2 {
     padding: 10px 28px;
     border-radius: 12px;
 }
-.col-lg-12.services-slider {
+.slick-slide .service-item{
     background: #fff;
     /* padding: 20px; */
     border-radius: 10px;
 }
+
 .content-wrap{
     padding:10px;
     
@@ -667,6 +676,50 @@ perspective:1000px;
     top: -273px;
     position: relative;
 }
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 23px;
+    line-height: 1;
+    opacity: .75;
+    color: #000 !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: transparent;
+}
+.slick-prev{
+    /* right: 44px; */
+	position:relative;
+    cursor: pointer;
+	    box-shadow: 0px 0px 176px 159px #f6f6f6;
+    position: relative;
+    z-index: 99;
+}
+.slick-next{
+    /* left: 44px; */
+    position:relative;
+    cursor: pointer;
+        box-shadow: 0px 0px 159px 179px #f6f6f6;
+position: relative;
+z-index: 99;
+}
+.slick-prev, .slick-next {
+    font-size: 54px;
+    line-height: 0;
+    position: absolute;
+    top: 50%;
+    display: block;
+    
+    width: 20px;
+    height: 20px;
+    background: transparent !important;
+    padding: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    color: #000;
+    border: none;
+    outline: none;
+    background: transparent;
+}
 .services-slider .owl-prev span {
     font-size: 72px;
     position: relative;
@@ -697,7 +750,7 @@ perspective:1000px;
   padding: 20px 35px;
     border: 1px solid #d6f3f1;
     background: #fff;
-    width: 372px;
+    /* width: 372px; */
     height: 271px;
     border-radius:14px;
     margin-bottom: 17px;
@@ -752,6 +805,40 @@ perspective:1000px;
     width: 150px;
     height: 150px;
 }
+.swiper-button-prev:after {
+    font-family: swiper-icons;
+    font-size: var(--swiper-navigation-size);
+    text-transform: none !important;
+    letter-spacing: 0;
+    font-variant: initial;
+    color: #818284;
+    font-size: 61px;
+    margin-right: -66px;
+    position: relative;
+    line-height: 1;
+    margin-top: 78px;
+}
+.swiper-button-next:after {
+    font-family: swiper-icons;
+    font-size: var(--swiper-navigation-size);
+    text-transform: none !important;
+    letter-spacing: 0;
+    font-variant: initial;
+    color: #818284;
+    font-size: 61px;
+    margin-left: -81px;
+    position: relative;
+    line-height: 1;
+    margin-top: 78px;
+}
+.testimonial-carousel{
+    height: 408px;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+    display: block;
+    padding-top: 106px !important;
+}
 .testi-box::before {
     content: '';
     position: absolute;
@@ -793,6 +880,15 @@ perspective:1000px;
     background-color: #d6f3f1;
     transition: 0.8s linear;
 }
+
+.slick-list {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    height: 556px;
+}
 .sec4bx .vc_column-inner:hover .vc_icon_element-inner{
 background-color:#402a49 !important;
 	transition:0.8s linear;
@@ -809,6 +905,23 @@ background-color:#402a49 !important;
       font-size: 120px;
     position: relative;
 }
+.main-bx-icon {
+    background-color: #3eb8b3;
+    width: 4em !important;
+    border: 2px solid transparent;
+    display: flex;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 4em;
+}
+.text-wrap{
+    text-align: left;
+}
+.main-bx-icon span{
+    font-size: 1.19em !important;
+    color: #FFF;
+}
 .services-slider3  .owl-prev{
        font-size: 72px;
 	  right: 0px;
@@ -823,6 +936,9 @@ background-color:#402a49 !important;
 .services-slider3  .owl-next{
        left: 0px;
     position: relative;
+}
+.bg-Big-blue{
+    background-image: url('./../assest/Shape-1.png') !important;
 }
 /*section 4*/
 /* single-page-css */
@@ -1090,6 +1206,14 @@ font-size:15px;
     font-size: 14px;
     text-decoration: none;
 }
+.slick-slide {
+    display: none;
+    float: left;
+    margin: 0 7px;
+    height: 100%;
+    overflow: hidden;
+    min-height: 1px;
+}
 	.small-text-main ul li {
     font-size: 20px;
     color: #fff;
@@ -1119,6 +1243,14 @@ font-size:15px;
 @media(min-width: 1024px) and (max-width:1200px) {
     .logo-wrap {
         padding:0 32px 0 71px!important
+    }
+    .slick-slide {
+        display: none;
+        float: left;
+        margin: 0 7px  !important;
+        height: 100%;
+        overflow: hidden;
+        min-height: 1px;
     }
 .single-page-bg-1 {
     background-color: #8ca967!important;
@@ -1352,7 +1484,7 @@ display:none ;
     height: 653px;
 }
 	.bg-sec-purple {
-    background-image: url(https://dhcare.youronlineconversation.com/wp-content/uploads/2024/08/Shape-1.png?id=126) !important;
+    background-image: url('./Shape-1.png') !important;
     background-position: center !important;
     background-repeat: no-repeat !important;
     background: #412949 !important;
