--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -40,6 +40,7 @@ body {
 	margin: 0;
 	overflow-x:hidden;
 	font-family: "ubunto";
+    overflow-x: hidden !important;
 	font-weight:500;
 	font-size:16px;
 }
