--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1480,7 +1480,7 @@ top:-10px !important;
         justify-content: center;
         display: flex;
     }
-    
+
     .logo-wrap{
         padding:0px !important;
         
@@ -1551,8 +1551,23 @@ top:-10px !important;
         font-size: 22px;
         line-height: 38px;
     }
-    .banner-container h2{
+      .banner-container h2 {
         font-size: 18px !important;
+        line-height: 28px !important;
+    }
+    
+    .swiper-button-prev, .swiper-button-next ,  .slick-prev, .slick-next{
+        display: none  !important;
+    }
+    .col-12.col-sm-12.col-lg-7.col-md-7.text-left {
+        margin-top: 21px;
+    }
+    .bg-back-img {
+        /* background-image: url(http://localhost:3000/static/media/New-Project%20(1) .1256282… . webp) !important; */
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+        padding: 20px;
     }
          .main-banner{
      background-image:url('./../assest/banner.webp');
@@ -1623,6 +1638,48 @@ display:none !important;
     .logo-wrap{
         padding:0px !important;
         
+    }
+    .mobile-menu li {
+        margin-bottom: 9px  !important;
+    }
+    .mobile-menu li a {
+        border-radius: 0;
+        border: 0;
+        margin: 0;
+        /* line-height: 100%; */
+        height: 100%;
+        padding: 3px 22px !important;
+        background: 0 0;
+        text-align: left;
+        color: #41c2be;
+        font-size: 13px !important;
+        line-height: 17px !important;
+    }
+    a.custom-logo-link.bg-design-logo-mb {
+        width: 100%;
+        border-radius: 0;
+        border: 0;
+        text-align: center !important;
+        margin: 0;
+        line-height: 100%;
+        background: #97b670 !important;
+        height: 100%;
+        padding: 0px 22px !important;
+        background: 0 0;
+        text-align: left;
+        color: #41c2be;
+        font-size: 20px;
+    }
+    .footer-link-wrap a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 13px;
+        padding-bottom: 20px;
+    }
+    .head-btn:nth-child(1) {
+        background: #41294a;
+        color: #fff;
+        padding: 6px 1px !important;
     }
     .logo-wrap {
         padding: 0px !important ;
