--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1176,6 +1176,14 @@ ul {
         font-size: 14px;
         text-decoration: none;
     }
+    .banner-container img {
+        filter: brightness(1);
+        transition: filter 0.5s ease-in-out;
+        object-fit: fill;
+        width: 100%;
+        height: 100% !important;
+        /* display: none; */
+    }
     .logo-wrap:before {
         content: '';
         position: absolute;
@@ -1511,14 +1519,14 @@ top:-10px !important;
         width: 100%;
         overflow: hidden;
     }
-    .banner-container{
-        height: 370px !important;
+    .banner-container {
+        height: 312px !important;
     }
-    .banner-container h1{
-        font-size: 21px !important;
+    .banner-container h1 {
+        font-size: 4vw !important;
         width: 100% !important;
-    
         /* width: 100% !important; */
+        line-height: 4vh;
     }
     .banner-text h2 {
         background-color: rgba(255, 255, 255, 0);
@@ -1564,9 +1572,10 @@ top:-10px !important;
     position: relative;
     left: 0px !important;
     }
-    .cta-button{
-        font-size: 22px;
-        line-height: 38px;
+    .cta-button {
+        font-size: 3vw;
+        padding: 2px 16px;
+        line-height: 3vh;
     }
       .banner-container h2 {
         font-size: 18px !important;
@@ -1579,19 +1588,43 @@ top:-10px !important;
     .col-12.col-sm-12.col-lg-7.col-md-7.text-left {
         margin-top: 21px;
     }
-    .bg-back-img {
-        /* background-image: url(http://localhost:3000/static/media/New-Project%20(1) .1256282… . webp) !important; */
-        background-position: center !important;
-        background-repeat: no-repeat !important;
-        background-size: cover !important;
-        padding: 20px;
+    .main-banner {
+        background-size: 100% 90%;
+        background-position: center;
+        height: 275px !important;
+        position: relative;
+        left: 0;
+        right: 0;
+        /* position: relative; */
+        transition-property: transform;
+        display: block;
+        top: 0;
+        bottom: 0;
+        height: '100%';
+        z-index: 999;
+        background-repeat: no-repeat;
+    }
+    .banner-container img {
+        filter: brightness(1);
+        transition: filter 0.5s ease-in-out;
+        object-fit: fill !important;
+        width: 100% !important;
+        /* display: none; */
+        /* zoom: 0.5; */
+        /* top: -31px; */
+        z-index: 0;
+        /* height: auto; */
+        height: 100% !important;
+        /* display: none; */
+        display: block;
+        position: relative;
     }
          .main-banner{
      background-image:url('./../assest/banner.webp');
-     background-size:100% 100%;
-      background-position: 'center';
-      height:'100%' ;
-      background-repeat: no-repeat;
+     background-size: 100% 100%;
+     background-position: 'center';
+     height: '100%';
+     background-repeat: no-repeat;
      }
 
     .menu-item-wrap{
@@ -1697,6 +1730,7 @@ display:none !important;
         background: #41294a;
         color: #fff;
         padding: 6px 1px !important;
+        margin: 6px 11px;
     }
     .logo-wrap {
         padding: 0px !important ;
@@ -1734,12 +1768,30 @@ display:none ;
         padding: 230px 0px;
     }
     .small-text-main ul li {
-        font-size: 12px;
+        font-size: 11px;
         color: #fff;
-        line-height: 25px;
+        line-height: 22px;
     }
     .mb-flex-reverse{
         flex-direction:column-reverse;
+    }
+    .small-text-main h2 {
+        font-size: 26px;
+        color: #fff;
+        line-height: 22px;
+    }
+    .small-text-main h2 {
+        font-size: 26px;
+        color: #fff;
+        line-height: 22px;
+    }
+    .single-page-bg-row {
+      
+        padding: 81px 0px  !important;
+    }
+    .small-text-main ul li > i {
+  
+        padding: 2px;
     }
     .singl-page-main-text p {
     color: #fff;
