--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -1176,6 +1176,11 @@ ul {
         font-size: 14px;
         text-decoration: none;
     }
+    .single-page-bg-row {
+      
+        padding: 176px 0px;
+     
+    }
     .banner-container img {
         filter: brightness(1);
         transition: filter 0.5s ease-in-out;
