--- a/src/assest/style.css
+++ b/src/assest/style.css
@@ -65,7 +65,10 @@ h1 {
 	font-size: 2em;
 	margin: 0.67em 0;
 }
+h2{
 
+    font-weight: 600 !important;
+}
 /* Grouping content
 	 ========================================================================== */
 
@@ -1809,6 +1812,16 @@ display:none !important;
     .logo-wrap{
         padding:0px !important;
         
+    }
+    img.custom-logo {
+        width: 50px;
+        height: auto;
+    }
+    .mobile-menu-toggle {
+      
+        padding: 7px 12px !important;
+       
+        font-size: 14px !important;
     }
     .head-btn:nth-child(1):hover {
         background: #97b670;
